Centered download link on menu, removed blue test frames for spacing, working on carousel issues

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -35,8 +35,7 @@ p {
 }
 .miniCarousel {
 	height: 100%;
-	width: 130%;
-	margin: 0;
+	width: 100%;
 }
 .menuPic {
 	-webkit-box-shadow: 0px 0px 7px 5px #E53935; 
@@ -153,4 +152,12 @@ nav.nav-center ul li a {
 /* Temp */
 .test {
 	border: 1px solid blue;
+}
+.righty {
+	text-align: center;
+}
+.carouselSlim {
+	padding: 0;
+	margin: 0;
+	height: 250px;
 }
